<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">



    <Button

        android:id="@+id/btn_backMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_backMenu"
        android:onClick="BackActivityMain"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_call"/>

    <Button
        android:id="@+id/btn_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="massageMusic"
        android:text="@string/btn_music"
        android:textLocale="@string/btn_musicMassage" />

    <Button
        android:id="@+id/btn_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="massageVideo"
        android:text="@string/btn_video"
        android:textLocale="@string/btn_videoMassage"
        android:layout_below="@id/btn_music"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="massageCall"
        android:text="@string/btn_call"
        android:textLocale="@string/btn_callMassage"
        android:layout_below="@id/btn_video"
        android:layout_centerHorizontal="true" />

</RelativeLayout>