<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_newGame"
        android:text="@string/btn_newGame"
        android:textLocale="@string/btn_newGameMassage"
        android:onClick="massageNewGame"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_setting"
        android:text="@string/btn_setting"
        android:onClick="startActivitySetting"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_newGame"/>

    <Button
        android:id="@+id/btn_directory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_directory"
        android:textLocale="@string/btn_directoryMassage"
        android:onClick="massageDirectory"
        android:layout_below="@id/btn_setting"
        android:layout_centerHorizontal="true" />

</RelativeLayout>